# pingforbeer

./: .env  .gitignore  README.md  docker-compose.yml  setup.sh  test.sqlite3
.github/workflows/: backend-tests.yml  ci.yml  frontend-tests.yml
aura-mobile/: package-lock.json  package.json
backend/: Dockerfile  aura.sqlite3  docker-compose.yml  pfb.sqlite3  pyproject.toml  requirements.txt  test.sqlite3
backend/app/: api.py  auth.py  calendar_ics.py  db.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test.sqlite3  test_friends_unfriend.py  test_happy_path.py  test_users_search.py  test_validation.py
frontend/: .eslintrc.json  .prettierrc  Dockerfile  eslint.config.cjs  eslint.config.js  index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.jsx  api.js  main.jsx  useAuth.jsx
frontend/src/components/: Navbar.jsx  Navbar.test.jsx
frontend/src/pages/: CreatePing.jsx  Dashboard.jsx  Friends.jsx  Friends.test.jsx  Login.jsx  Login.test.jsx  Register.jsx  UserProfile.jsx
frontend/src/routes/: ProtectedRoute.jsx
frontend/src/styles/: theme.css
mobile/aura-mobile/: app.json  package-lock.json  package.json
mobile/aura-mobile/.expo/: settings.json
mobile/aura-mobile/app/: _layout.tsx  index.tsx
mobile/aura-mobile/app/(tabs)/: _layout.tsx  friends.tsx  index.tsx  pings.tsx  profile.tsx
mobile/aura-mobile/constants/: AuraView.tsx  theme.ts
mobile/aura-mobile/lib/: api.ts  auth.ts  storage.ts
