[project]
name="pingforbeer-backend"
version="0.1.0"
dependencies=[
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "pydantic",
  "bcrypt",
  "PyJWT",
  "python-multipart",
  "anyio"
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''
